--- a/css/_index.scss
+++ b/css/_index.scss
@@ -147,15 +147,16 @@ font-family: 'Rajdhani', sans-serif;
     width:80%;
     margin: auto;
     padding: 40px 0px;
-    overflow: scroll;
+    // overflow: scroll;
 
     .brands{
-    width: 13%;
+    width: 15%;
     h5{
         font-size: 17px;
         margin-right: 30px;
         font-family: 'Rajdhani', sans-serif;
         padding-top: 10px;
+
     }
     a{
         text-decoration: none;
@@ -175,7 +176,7 @@ font-family: 'Rajdhani', sans-serif;
        padding-left: 15px;
     }
     .myimages{
-        width: 87%;
+        width: 85%;
        display: flex;
     img{
 
@@ -207,6 +208,7 @@ font-family: 'Rajdhani', sans-serif;
         h2{
          display: inline;
          font-size: 25px;
+         margin-left: 40px;
          font-family: 'Rajdhani', sans-serif;
      }
     }
@@ -218,7 +220,7 @@ font-family: 'Rajdhani', sans-serif;
         justify-content: space-between;
 
         .box-1{
-            width: 365px;
+            width: 345px;
             position: relative;  
             overflow: hidden;  
             height: 100%;
@@ -883,7 +885,7 @@ font-family: 'Rajdhani', sans-serif;
             border: 1px solid white;
             font-family: 'Rajdhani', sans-serif;
             padding: 7px 0px;
-            width: 170px;
+            width: 160px;
             text-align: center;
             display: inline-block;
             border-radius: 3px;
@@ -956,7 +958,7 @@ padding: 25px 0px;
         opacity: 0;
         transition:  0.3s ease-in-out;
         &:hover {
-        opacity: 1;
+        opacity: 1.15;
       }
       .quick{
         position: absolute;
@@ -1090,11 +1092,14 @@ padding: 25px 0px;
         position: relative;
         overflow: hidden;
         margin: 25px 15px;
-        &:hover{
-            img{
-                scale: 1.1;
-            }
+        .image{
+         &:hover {
+             img{
+                transform: scale(1.5);
+             }
+         }       
         }
+     
         .image{
             position: relative;
             img{   
@@ -1109,7 +1114,6 @@ padding: 25px 0px;
             height: 100%;
             width: 100%;
          }
-
             .little-text{
                 top: 15%;
                 left: 12%;
@@ -1222,7 +1226,7 @@ display: flex;
             overflow: hidden;
             &:hover{
                 img{
-                    scale: 1.15;
+                    transform: scale(1.1);
                 }
             }
             img{   
@@ -1293,5 +1297,3 @@ display: flex;
 }
 }
 }
-
-@import '_respindex'  ;
