--- a/css/_about.scss
+++ b/css/_about.scss
@@ -23,6 +23,7 @@
     background-image: url(https://q4p3y7t4.rocketcdn.me/wp-content/uploads/revslider/cardealer-slider2/010f2-75b06-bg-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
     // size: 100%;
 h2{
     position: absolute;
