--- a/css/_respabout.scss
+++ b/css/_respabout.scss
@@ -24,7 +24,7 @@
             top: 38%;
         }
         a{
-            top:42% ;
+            top:43% ;
         }
     }
     .section-2-boxes{
@@ -81,9 +81,12 @@
             }
         }
         .four-cars{   
+            text-align: center;
         .car{
-            width: 46%;
+            width: 47%;
             margin-bottom: 20px;
+            margin-right: 5px;
+            margin-left: 5px;
         }
         }
     }
