--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -5,6 +5,7 @@
     padding: 230px 100px 170px 100px;
     text-align: center;
     background-position: center;
+    margin-top:50px ;
 
 .news{
     color: white;
@@ -190,7 +191,7 @@ z-index: 1;
         flex-wrap: wrap;
     .left{
         margin-right: 20px;
-      width: 59%;
+      width: 57%;
     .texts{
         display: flex;
         justify-content: space-between;
@@ -333,8 +334,8 @@ z-index: 1;
     }
     .right{
         margin-left: 70px;
-        width: 33%;
-        padding-top: 30px;
+        width: 34%;
+        padding-top: 40px;
         h3{
 font-size: 16px;
 display: block;
@@ -360,7 +361,7 @@ font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubunt
                 display: block;
             }
             .qutu{
-                width: 28%;
+                width: 27%;
                 padding: 14px 27px;
                 text-align: center;
                 margin: 0px 10px;    
