--- a/css/_respcontact.scss
+++ b/css/_respcontact.scss
@@ -1,4 +1,4 @@
-@media(max-width:768px) {
+@media(max-width:992px) {
 
 
     .section-1-news{
@@ -91,4 +91,8 @@
     }
     
     
+    }
+
+    @media(min-width:768px) and (max-width:1024px) {
+
     }
