--- a/css/style.css
+++ b/css/style.css
@@ -2465,7 +2465,7 @@
   width: 100%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .section-1-news {
     background-size: 600px;
     padding: 80px 0px;
@@ -3151,16 +3151,16 @@
   font-size: 14px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .section-1-road h2 {
     font-size: 25px;
-    top: 13%;
+    top: 26%;
   }
   .section-1-road h1 {
     font-size: 50px;
   }
   .section-1-road .road {
-    top: 18%;
+    top: 35%;
   }
   .section-1-road .car, .section-1-road .section-4-recent .cars .car-2, .section-4-recent .cars .section-1-road .car-2, .section-1-road .section-4-recent .cars .car-1, .section-4-recent .cars .section-1-road .car-1 {
     padding: 150px 0px 60px 0px;
@@ -3168,13 +3168,13 @@
   .section-1-road .logo {
     width: 80px;
     left: 70%;
-    top: 16.5%;
+    top: 34.5%;
   }
   .section-1-road .track {
-    top: 38%;
+    top: 73%;
   }
   .section-1-road a {
-    top: 43%;
+    top: 80%;
   }
   .section-2-boxes {
     width: 100%;
@@ -3870,7 +3870,7 @@
   color: #383e47;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   #header {
     border-bottom: none;
     margin-bottom: 30px;
@@ -3911,6 +3911,18 @@
     margin-left: 20%;
   }
   #header .bottom-header {
+    display: none;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1324px) {
+  .top-header .box-left {
+    width: 60%;
+  }
+  .top-header .box-right {
+    width: 40;
+  }
+  .bottom-header {
     display: none;
   }
 }
@@ -4096,7 +4108,7 @@
           justify-content: end;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .footer-top {
     width: 100%;
     height: 110vh;
@@ -4141,7 +4153,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .section-1-custom {
     padding: 110px;
     position: relative;
@@ -5090,5 +5102,167 @@
   #main .main-bottom .box-right .box-main .box-two .box-rightt .certified .boxxs a:not(.share) img {
     width: 100%;
   }
+}
+
+#maps {
+  width: 100%;
+  height: 53vh;
+}
+
+#maps iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.main-boxes .box-top {
+  margin-top: 30px;
+}
+
+.main-boxes .box-top a {
+  text-decoration: none;
+  color: #383e47;
+  font-size: 14px;
+  margin-right: 5px;
+}
+
+.main-boxes .box-top i {
+  color: #383e47;
+  font-size: 14px;
+  margin-right: 5px;
+}
+
+.main-boxes .box-top span {
+  color: #383e47;
+  font-size: 14px;
+}
+
+.main-boxes .box-top p {
+  color: #383e47;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 12px;
+}
+
+.main-boxes .box-center {
+  margin-top: 70px;
+}
+
+.main-boxes .box-center p {
+  -webkit-columns: #383e47;
+          columns: #383e47;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.main-boxes .box-center span {
+  color: #383e47;
+  font-size: 13px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.main-boxes .box-bottom {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.main-boxes .box-bottom p {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #383e47;
+  font-size: 13px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
+
+.main-boxes .box-bottom input {
+  width: 95%;
+  border: 1px solid #cccfd6;
+  border-radius: 3px;
+  height: 40px;
+}
+
+.main-boxes .box-bottom .big {
+  height: 100px;
+}
+
+.main-boxes .boox-bot {
+  margin-top: 35px;
+  margin-bottom: 80px;
+}
+
+.main-boxes .boox-bot a {
+  text-decoration: none;
+  color: #fff;
+  background-color: #383e47;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  padding: 10px 40px;
+  border-radius: 2px;
+}
+
+.main-boxes .box-texx {
+  width: 100%;
+  height: 80vh;
+  background-color: #f7f7f7;
+  margin-top: 165px;
+  margin-left: 20px;
+}
+
+.main-boxes .box-texx p {
+  margin: 50px 38px;
+  display: inline-block;
+  color: #383e47;
+  font-size: 13px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
+
+.main-boxes .box-texx .saml {
+  font-size: 12px;
+  margin: -25px 36px;
+  font-weight: 500;
+  font-family: Arimo, sans-serif;
+}
+
+.main-boxes .box-texx a {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  padding: 10px 40px;
+  border-radius: 2px;
+  text-decoration: none;
+  display: block;
+  border: 1px solid #b6b6b6;
+  width: 38%;
+  margin: 25px 35px;
+  color: #383e47;
+}
+
+.main-boxes .box-texx a:hover {
+  color: #fff;
+  background-color: #383e47;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.main-boxes .box-texx h3 {
+  color: #383e47;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  margin: 40px 35px;
+  margin-bottom: -30px;
+}
+
+.main-boxes .box-texx .end {
+  color: #383e47;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  display: block;
+  margin-bottom: -35px;
 }
 /*# sourceMappingURL=style.css.map */
