--- a/css/_index.scss
+++ b/css/_index.scss
@@ -147,7 +147,7 @@
     width: 80%;
     margin: auto;
     padding: 40px 0px;
-    // overflow: scroll;
+    overflow-x: scroll;
 
     .brands {
         width: 15%;
